--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
+# src\DevelopmentInProgress.DipBot.Console\downloads
+downloads/
+
 # User-specific files
 *.suo
 *.user
