--- a/src/DevelopmentInProgress.TradeServer.StrategyRunner.WebHost/DevelopmentInProgress.TradeServer.StrategyRunner.WebHost.csproj
+++ b/src/DevelopmentInProgress.TradeServer.StrategyRunner.WebHost/DevelopmentInProgress.TradeServer.StrategyRunner.WebHost.csproj
@@ -16,6 +16,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\dipsocket\src\DipSocket.NetCore.Extensions\DipSocket.NetCore.Extensions.csproj" />
+    <ProjectReference Include="..\..\..\dipsocket\src\DipSocket\DipSocket.csproj" />
     <ProjectReference Include="..\..\..\tradeview\src\DevelopmentInProgress.MarketView.Api.Binance\DevelopmentInProgress.MarketView.Api.Binance.csproj" />
     <ProjectReference Include="..\..\..\tradeview\src\DevelopmentInProgress.MarketView.Interface\DevelopmentInProgress.MarketView.Interface.csproj" />
     <ProjectReference Include="..\..\..\tradeview\src\DevelopmentInProgress.MarketView.Service\DevelopmentInProgress.MarketView.Service.csproj" />
