Refactor namespace from StrategyEngine to StrategyRunner
Refactor namespace from StrategyEngine to StrategyRunner

--- a/src/DevelopmentInProgress.TradeServer.StrategyRunner.WebHost/DevelopmentInProgress.TradeServer.StrategyRunner.WebHost.csproj
+++ b/src/DevelopmentInProgress.TradeServer.StrategyRunner.WebHost/DevelopmentInProgress.TradeServer.StrategyRunner.WebHost.csproj
@@ -2,8 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
-    <AssemblyName>DevelopmentInProgress.TradeServer.StrategyEngine.WebHost</AssemblyName>
-    <RootNamespace>DevelopmentInProgress.TradeServer.StrategyEngine.WebHost</RootNamespace>
+    <AssemblyName>DevelopmentInProgress.TradeServer.StrategyRunner.WebHost</AssemblyName>
+    <RootNamespace>DevelopmentInProgress.TradeServer.StrategyRunner.WebHost</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
