--- a/src/DevelopmentInProgress.TradeServer.StrategyRunner.WebHost/DevelopmentInProgress.TradeServer.StrategyRunner.WebHost.csproj
+++ b/src/DevelopmentInProgress.TradeServer.StrategyRunner.WebHost/DevelopmentInProgress.TradeServer.StrategyRunner.WebHost.csproj
@@ -18,10 +18,9 @@
   <ItemGroup>
     <ProjectReference Include="..\..\..\dipsocket\src\DipSocket.NetCore.Extensions\DipSocket.NetCore.Extensions.csproj" />
     <ProjectReference Include="..\..\..\dipsocket\src\DipSocket\DipSocket.csproj" />
-    <ProjectReference Include="..\..\..\tradeview\src\DevelopmentInProgress.Common\DevelopmentInProgress.Common.csproj" />
-    <ProjectReference Include="..\..\..\tradeview\src\DevelopmentInProgress.MarketView.Api.Binance\DevelopmentInProgress.MarketView.Api.Binance.csproj" />
-    <ProjectReference Include="..\..\..\tradeview\src\DevelopmentInProgress.MarketView.Interface\DevelopmentInProgress.MarketView.Interface.csproj" />
-    <ProjectReference Include="..\..\..\tradeview\src\DevelopmentInProgress.MarketView.Service\DevelopmentInProgress.MarketView.Service.csproj" />
+    <ProjectReference Include="..\..\..\tradeview\src\DevelopmentInProgress.TradeView.Common\DevelopmentInProgress.TradeView.Common.csproj" />
+    <ProjectReference Include="..\..\..\tradeview\src\DevelopmentInProgress.TradeView.Interface\DevelopmentInProgress.TradeView.Interface.csproj" />
+    <ProjectReference Include="..\..\..\tradeview\src\DevelopmentInProgress.TradeView.Service\DevelopmentInProgress.TradeView.Service.csproj" />
   </ItemGroup>
 
 </Project>
