Remove DipSocket and add DevelopmentInProgress.Socket and Extensions
Remove DipSocket and add DevelopmentInProgress.Socket and Extensions

--- a/src/DevelopmentInProgress.TradeServer.StrategyRunner.WebHost/DevelopmentInProgress.TradeServer.StrategyRunner.WebHost.csproj
+++ b/src/DevelopmentInProgress.TradeServer.StrategyRunner.WebHost/DevelopmentInProgress.TradeServer.StrategyRunner.WebHost.csproj
@@ -18,11 +18,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\dipsocket\src\DipSocket.NetCore.Extensions\DipSocket.NetCore.Extensions.csproj" />
-    <ProjectReference Include="..\..\..\dipsocket\src\DipSocket\DipSocket.csproj" />
+    <ProjectReference Include="..\..\..\tradeview\src\DevelopmentInProgress.Socket\DevelopmentInProgress.Socket.csproj" />
     <ProjectReference Include="..\..\..\tradeview\src\DevelopmentInProgress.TradeView.Common\DevelopmentInProgress.TradeView.Common.csproj" />
     <ProjectReference Include="..\..\..\tradeview\src\DevelopmentInProgress.TradeView.Interface\DevelopmentInProgress.TradeView.Interface.csproj" />
     <ProjectReference Include="..\..\..\tradeview\src\DevelopmentInProgress.TradeView.Service\DevelopmentInProgress.TradeView.Service.csproj" />
+    <ProjectReference Include="..\DevelopmentInProgress.Socket.Extensions\DevelopmentInProgress.Socket.Extensions.csproj" />
   </ItemGroup>
 
 </Project>
