--- a/src/DevelopmentInProgress.TradeServer.Console/DevelopmentInProgress.TradeServer.Console.csproj
+++ b/src/DevelopmentInProgress.TradeServer.Console/DevelopmentInProgress.TradeServer.Console.csproj
@@ -16,7 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\tradeview\src\DevelopmentInProgress.TradeView.Interface\DevelopmentInProgress.TradeView.Interface.csproj" />
+    <ProjectReference Include="..\..\..\tradeview\src\DevelopmentInProgress.TradeView.Core\DevelopmentInProgress.TradeView.Core.csproj" />
     <ProjectReference Include="..\DevelopmentInProgress.TradeServer.StrategyRunner.WebHost\DevelopmentInProgress.TradeServer.StrategyRunner.WebHost.csproj" />
   </ItemGroup>
 
