--- a/src/DevelopmentInProgress.TradeServer.StrategyRunner.WebHost/DevelopmentInProgress.TradeServer.StrategyRunner.WebHost.csproj
+++ b/src/DevelopmentInProgress.TradeServer.StrategyRunner.WebHost/DevelopmentInProgress.TradeServer.StrategyRunner.WebHost.csproj
@@ -9,6 +9,10 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore" Version="2.1.2" />
     <PackageReference Include="Microsoft.AspNetCore.Hosting.Abstractions" Version="2.1.1" />
+    <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="3.3.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.Extensions.DependencyModel" Version="2.1.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="2.1.1" />
     <PackageReference Include="System.IO" Version="4.3.0" />
